# DRQ-Miner-Testing

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  update-dry-run.yml  upstream-watch.yml
cmake/: FindHWLOC.cmake  FindUV.cmake  OpenSSL.cmake  android.cmake  astro_spsa.cmake  astrobwt.cmake  bc3.cmake  bundled_libuv.cmake  deps.cmake  flags.cmake  nm.cmake  verushash.cmake
doc/: ALGORITHMS.md  DERO_TNN_GAP.md  DEVFEE_PROXY_BOOTSTRAP.md  DEVFEE_VALIDATION.md  GITHUB_PRIVATE_SETUP.md  GPU_VERUS_NATIVE.md  LEGACY_GPU_AND_ANDROID.md  OPERATOR_DEFAULTS.md  PEARL_HASHMONKEYS_INTEGRATION.md  PEARL_INTEGRATION.md  PHASE2_BACKLOG.md  PUBLISHING.md  RELEASE_NOTES_v1.0.0.md  TERMUX_USERLAND_ANDROID.md  USERLAND_QUICKSTART.md  V1_RELEASE_CHECKLIST.md  WINDOWS_RELEASE_AUDIT.md  verushash-porting-summary.md  verushash-porting.patch
lib/astrospsa/: spsa_salsa20_stub.h
lib/tnn_compat/: tnn_ops.h
res/: README.md  app.rc  drq_logo_forum.txt
res/graphic/: tty_frames.inc.h
scripts/: VRSC2_with_checks.bat  embed_verus_cl.ps1  gen_drq_banner.py  gen_drq_logo_banner.py  gen_drq_logo_from_png.py  generate_app_icon.ps1  import_ascii_html.py  mine_dero_drq_rabid.bat  mine_dero_tnn_rabid.bat  mine_vrsc_cpu.bat  mine_vrsc_cuda.bat  mine_vrsc_cuda_example.bat  mine_vrsc_kepler_opencl.bat  mine_vrsc_opencl.bat  package_windows_release.ps1  setup_github_private.ps1  verify_windows_release.ps1  vipor_cuda_smoke.bat
scripts/android/: README.md  build_termux.sh  build_userland.sh  config.verus.phone.json.example  download_from_github_release.sh  mine_dero_userland.sh  mine_vrsc_termux.sh  push_to_termux.sh  push_to_userland.sh
scripts/ci/: build_hwloc_x64.sh  build_linux_x64_release.sh  build_openssl_aarch64.sh  fetch_astrospsa_aarch64.sh
scripts/linux/: fetch_prebuilt_x64.sh  install_build_deps.sh
scripts/proxy/: devfee-routing.template.json
scripts/templates/: README.release.txt  config.json.example
scripts/upstream/: check_update_dry_run.ps1  check_upstream.ps1  generate_manifest.py  manifest.template.json
src/: App.cpp  App.h  Summary.cpp  config.json  donate.h  version.h  xmrig.cpp
src/backend/common/: WorkerJob.h
src/backend/common/misc/: PciTopology.h
src/backend/cpu/: CpuConfig.cpp  CpuConfig_gen.h  CpuWorker.cpp  CpuWorker.h
src/backend/cpu/platform/: BasicCpuInfo.cpp  HwlocCpuInfo.cpp
src/backend/cuda/: CudaBackend.cpp  CudaConfig.cpp  CudaConfig.h  CudaConfig_gen.h  CudaThread.cpp  CudaThread.h  CudaWorker.cpp  cuda.cmake
src/backend/cuda/runners/: CudaVerusHostRunner.cpp  CudaVerusHostRunner.h
src/backend/cuda/wrappers/: CudaDevice.cpp  CudaDevice.h  CudaLib.cpp  NvmlLib.cpp
src/backend/opencl/: OclConfig.cpp  OclConfig_gen.h  OclThread.h  OclWorker.cpp  opencl.cmake
src/backend/opencl/cl/: OclSource.cpp
src/backend/opencl/cl/verus/: verushash.cl
src/backend/opencl/generators/: ocl_verus_generator.cpp
src/backend/opencl/runners/: OclVerusHashRunner.cpp  OclVerusHashRunner.h
src/backend/opencl/wrappers/: OclDevice.cpp
src/base/: base.cmake
src/base/crypto/: Algorithm.cpp  Algorithm.h  Coin.cpp  Coin.h  sha3.cpp  sha3.h
src/base/kernel/: Entry.cpp  Entry.h  Platform.h  Platform_win.cpp
src/base/kernel/config/: BaseConfig.cpp  BaseTransform.cpp
src/base/kernel/interfaces/: IConfig.h
src/base/net/stratum/: Client.cpp  Client.h  DaemonClient.cpp  DaemonClient.h  EthStratumClient.cpp  EthStratumClient.h  Job.cpp  Job.h  Pool.cpp  Pool.h  Pools.cpp  SelfSelectClient.cpp
src/base/net/stratum/benchmark/: BenchClient.cpp  BenchConfig.cpp
src/base/net/stratum/strategies/: SinglePoolStrategy.cpp
src/branding/: DrqBanner.cpp  DrqBanner.h  DrqBannerLogo.inc.h  DrqGraphic.cpp  DrqGraphic.h  DrqGraphicTty.cpp  DrqSetup.cpp  DrqSetup.h
src/core/: Controller.cpp  Controller.h  Miner.cpp
src/core/config/: Config.cpp  Config.h  ConfigTransform.cpp  Config_default.h  Config_platform.h  usage.h
src/core/update/: UpdateApply.cpp  UpdateApply.h  UpdateCheck.cpp  UpdateCheck.h  UpdateConfig.cpp  UpdateConfig.h
src/crypto/astrobwt/: AstroBWT.cpp  AstroBWT.h  Salsa20.cpp  Salsa20.hpp  astrobwt_suffix.cpp  astrobwt_suffix.h  divsufsort.c  hash_utils.h  sa_fast.h  sais.h  sha256_arm_crypto.cpp  sha256_utils.cpp  sha256_utils.h
src/crypto/astrobwt/aarch64/: astro_aarch64.cpp  astro_aarch64.h  astrobwt_aarch64.cpp
src/crypto/astrobwt/spsa/: spsa_bridge.cpp  spsa_bridge_posix.cpp  spsa_finalize.cpp  spsa_finalize.h  spsa_tnn_stubs.cpp
src/crypto/astrobwt/wolf/: wolf.h  wolf_compute.cpp  wolf_scalar.h  wolf_simd.h  wolf_stub.cpp  wolf_tables.cpp  wolf_tables.h  wolf_worker.cpp  wolf_worker.h
src/crypto/cn/: CnHash.cpp
src/crypto/nm/: NmShared.cpp  NmShared.h  nm_aes.h  nm_fast.c  nm_fast.h  nm_fast_fill.h  nm_fast_vaes256.c  nm_neuromorph.c  nm_neuromorph.h  nm_params.c  nm_params.h  nm_sha256.c  nm_sha256.h
src/crypto/verushash/: VerusHash_xmrig.cpp  VerusHash_xmrig.h  chacha20.cpp  common.h  equihash.cpp  equihash.h  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  sha1.cpp  sha256.cpp  sha512.cpp  uint256.cpp  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h
src/crypto/verushash/cuda/: VerusCudaBridge.cpp  VerusCudaBridge.h  ccminer_verus_gpu.cu  cuda_helper_compat.h  verus_cuda_max_gpus.h
src/net/: JobResult.h  JobResults.cpp  JobResults.h  Network.cpp
src/net/bc3/: GbtClient.cpp  GbtClient.h
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h
test_vectors/: test_astrobwt.cpp  test_neuromorph.cpp  test_sha3_256t.cpp  test_verushash.cpp
tools/drq-proxy/: .env.operator.example  README.md  drq_proxy.py  install_systemd.sh  routes.template.json  watch_devfee.sh
